2007-10-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_request_coords): If
	we get a size requisition, and we have ellipsization active,
	check if we are getting less space than what the layout needs
	and recompute the width.

2007-10-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-color.c (clutter_color_to_string): Change
	the print format to "%02x%02x%02x%02x" because we use guint8
	for each component, not guint16.

2007-10-19  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-entry.c (clutter_entry_paint): Fixed off by
	one error. (#566, Gwenole Beauchesne)

2007-10-18  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-timeline.c: (clutter_timeline_set_duration):
	rearranged arithemetic to allow specifying duration with sub second
	precision (also enables durations smaller than one second).

2007-10-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-private.h:
	* clutter/clutter-script.h:
	* clutter/clutter-script.c: Allow id-less objects: as long
	as they have a "type" member, a unique id will be provided.

	(json_object_end): Add merge id to the object information
	structure.

	(apply_behaviours), (add_children): Keep the unresolved
	objects around.

	(construct_stage), (clutter_script_construct_object): If an
	object has unresolved children or behaviours try resolving
	them when we ask for it.

	(json_parse_end), (clutter_script_ensure_objects): Ensure
	that the objects are fully constructed as best as we can when
	finished parsing.

	(object_info_free), (remove_by_merge_id):
	(clutter_script_unmerge_objects): Remove objects under the
	same merge id returned by the loading functions. (Fixes
	bug #558)

	* test/test-script.c:
	* test/test-script.json: Test unresolved merging and unmerging
	in ClutterScript.

2007-10-18  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-score.c:
	* clutter/clutter-score.h:
	* tests/test-score.c: