@@ -1,0 +1,8 @@
+#ifndef __CLUTTER_JSON_H__
+#define __CLUTTER_JSON_H__
+
+#include "json/json-types.h"
+#include "json/json-parser.h"
+#include "json/json-generator.h"
+
+#endif /* __CLUTTER_JSON_H__ */
